feat: Implement core CRUD functionality with Validation and API utilities
- Add Domain Entities: Container, ContainerType, ProductType
- Implement CQRS Commands & Queries (MediatR)
- Add FluentValidation for DTOs and Commands (Application & API layers)
- Implement REST Controllers with Search and Filtering
- Add JsonStringConverter for proper serialization
- Add Integration Tests for happy paths

--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5435;Database=cats_db;Username=cats_admin;Password=cats_password_2026"
+    "DefaultConnection": "Host=localhost;Port=5435;Database=cats_db;Username=cats_admin;Password=cats_password_2026;SSL Mode=Disable"
   }
 }
