feat: implement user authentication with Google and add user management не фуричить треба виправити

--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -7,5 +7,10 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5435;Database=cats_db;Username=cats_admin;Password=cats_password_2026;SSL Mode=Disable"
+  },
+  "Authentication": {
+    "Google": {
+      "ClientId": "288101212166-e68actio7v4m2olbripk5s3ak1571utl.apps.googleusercontent.com"
+    }
   }
 }
