feat: update authentication configuration and add login test page +-

--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -1,16 +1,17 @@
-{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5435;Database=cats_db;Username=cats_admin;Password=cats_password_2026;SSL Mode=Disable"
-  },
-  "Authentication": {
-    "Google": {
-      "ClientId": "288101212166-e68actio7v4m2olbripk5s3ak1571utl.apps.googleusercontent.com"
+  {
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "ConnectionStrings": {
+      "DefaultConnection": "Host=localhost;Port=5435;Database=cats_db;Username=cats_admin;Password=cats_password_2026;SSL Mode=Disable"
+    },
+    "Authentication": {
+      "Google": {
+        "ClientId": "",
+        "ClientSecret": ""
+      }
     }
   }
-}
