feat(auth): implement strict registration, invites, and user management security
Implemented comprehensive user onboarding and management logic compliant with the Technical Specification.

Key features:
- Implemented Strict Registration logic: users can only register via Invitation or Admin creation.
- Added "Admin Creation" flow: Admin creates Inactive user -> User logs in via Google -> System auto-activates the account.
- Implemented Email Notifications using SMTP (System.Net.Mail).
- Updated CreateInvitationCommand to send invitation emails with expiration links.
- Updated CreateUserCommand to send welcome emails for manually created users.

--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -13,5 +13,16 @@
         "ClientId": "",
         "ClientSecret": ""
       }
+    },
+    "EmailSettings": {
+      "SmtpServer": "smtp.gmail.com",
+      "SmtpPort": 587,
+      "SmtpUsername": "",
+      "SmtpPassword": "",
+      "SenderName": "",
+      "SenderEmail": ""
+    },
+    "App": {
+      "FrontendUrl": ""
     }
   }
